# web_scraper

./: .gitignore  Dockerfile  MANIFEST.in  README.md  ReadMe_LS.md  ScrapeService_Runner.py  environment.yml  requirements.txt  setup.cfg
app/: ScrapeEngine.py  ScrapeService.py  SearchEngine.py
app/data_io/: DataArchiveIOBase.py  FileDataArchiveIO.py
app/data_readers/: ScrapeTermReader.py
app/resources/archive/instance1/: snap_data_2021_08_31_t14_08_30.csv  snap_data_2021_08_31_t14_35_06.csv  snap_data_2021_08_31_t15_07_34.csv  snap_data_2021_08_31_t15_16_42.csv
app/resources/log_files/: scrape_service_instance_1_logger.txt
app/tests/ci_tests/test_scrape_engine/: TestScrapeEngine.py
app/tests/ci_tests/test_search_engine/: TestSearchEngine.py
common/config/: EngineConfig.py
googleapi/: .travis.yml  DESIGN_THOUGHTS.md  README.md  TODO.md  requirements.py
googleapi/googleapi/: __init__.py  google.py
googleapi/googleapi/modules/: __init__.py  calculator.py  currency.py  images.py  shopping_search.py  standard_search.py  utils.py
googleapi/googleapi/tests/: test_google.py  test_utils.py
html_scraper/: ScrapeEngine.py  ScrapeService.py  ScrapeService_Runner.py  SearchEngine.py
html_scraper/data_io/: DataArchiveIOBase.py  FileDataArchiveIO.py
html_scraper/data_readers/: ScrapeTermReader.py
html_scraper/resources/data/: term_data.csv
html_scraper/resources/log_files/: scrape_service_instance_1_logger.txt  scrape_service_logger.txt
tests/ci_tests/test_scrape_engine/: TestScrapeEngine.py
tests/ci_tests/test_search_engine/: TestSearchEngine.py
(+12 files in other folders)
