[metadata]
name = html_scraper
version = 0.0.1
author = LS4U
author_email = slxjtu@gmail.com
description = For searching for key words and scrapping the top result html
long_description = file: README_LS.md
long_description_content_type = text/markdown
url = https://github.com/luke4u/web_scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    googlesearch-python==1.0.0
    PyYAML==5.3.1
    pytest==6.2.1
    requests==2.24.0
    pandas==1.1.4
    fastparquet==0.4.1
    unidecode==1.2.0
    vcrpy=4.1.1
    future==0.18.2
    fake-useragent==0.1.11
    beautifulsoup4==4.9.1
    selenium==2.53.6
python_requires = >=3.7
include_package_data = False