[metadata]
name = html_scraper
version = 0.0.1
author = LS4U
author_email = slxjtu@gmail.com
description = For searching for key words and scrapping the top result html
long_description = file: ReadMe.txt
long_description_content_type = text/markdown
url = https://github.com/luke4u/web_scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True